@@ -59,7 +59,8 @@ Compatibility:
   build cannot be satisfied anymore.
 - External dependencies which can be downloaded via `--with-lib<foo>=download`
   at configure time, can now be provided via `build-config/packages` or
-  `--with-package-cache=<path>`.
+  `--with-package-cache=<path>`. Run `build-config/packages.sh` to list
+  all packages and their respective download URL.
 
 Bugfixes:
 
